# Bosch-Challenge

./: CMakeLists.txt  README.md
path_planning/: README.md
path_planning/pic/: state_diagram.puml
path_planning/src/: main.cpp  path_planner.h  trajectory_generator.cpp  vehicle.h
pic/: class_diagram.puml
src/: coordinate_converter.cpp  coordinate_converter.h  helpers.cpp  helpers.h  main.cpp  path_planner.cpp  path_planner.h  planner_state.cpp  planner_state.h  test.cpp  trajectory_cost.cpp  trajectory_cost.h  trajectory_estimator.cpp  trajectory_estimator.h  trajectory_generator.cpp  trajectory_generator.h  vehicle.cpp  vehicle.h
unittests/: test_trajectory_cost.cpp
